--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.47.2",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   }
