--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "@types/google.maps": "^3.47.2",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
+  },
+  "dependencies": {
+    "ress": "^4.0.0"
   }
 }
